--- a/templates/settings_profile.html
+++ b/templates/settings_profile.html
@@ -2,19 +2,24 @@
 {% block head %}
 <script>
 function previewFile(){
-       var preview = document.querySelector('img'); //selects the query named img
-       var file    = document.querySelector('input[type=file]').files[0]; //sames as here
-       var reader  = new FileReader();
+        var preview = document.querySelector('img'); //selects the query named img
+        var file    = document.querySelector('input[type=file]').files[0]; 
+        var input    = document.getElementById('pic');
+        var reader  = new FileReader();
 
-       reader.onloadend = function () {
+        reader.onloadend = function () {
            preview.src = reader.result;
-       }
+           input.value = preview.src;
+           console.log(input.value)
+           console.log(preview.src)
+        }
 
-       if (file) {
-           reader.readAsDataURL(file); //reads the data as a URL
-       } else {
+       	if (file) {
+           reader.readAsDataURL(file);
+           console.log(preview.reader); //reads the data as a URL
+        } else {
            preview.src = "";
-       }
+        }
   }
 
   previewFile();  //calls the function named previewFile()
@@ -29,14 +34,16 @@ function previewFile(){
 		  <div class="panel-body">
 		    <div class="row">
 			  <div class="col-md-4">
+			  	
 			    <div class="thumbnail">
-			      <img src="http://upload.wikimedia.org/wikipedia/commons/8/8d/President_Barack_Obama.jpg">
+			      <img src="http://upload.wikimedia.org/wikipedia/commons/8/8d/President_Barack_Obama.jpg" onchange="previewFile()">
 			    </div>
-
-			  	<form method="POST">
-			  		<p><label for="profile_picture">Upload Picture</label>
-			  		<input type="file" name="pic" id="pic" onchange="previewFile()"></p>
-			  		<button type="submit" name="b" value="Update Profile Picture" class="button primary">Update Profile Picture</button>
+			    	<form method="POST">
+				  		<p><label for="profile_picture">Upload Picture</label>
+				  		<input type="file" onchange="previewFile()"></p>
+				  		<input type="hidden" id="pic">
+				  		<button type="submit" name="b" value="Update Profile Picture" class="button primary">Update Profile Picture</button>
+			  		</form>
 			  </div>
 
 			  <div class="col-md-8">
@@ -49,7 +56,7 @@ function previewFile(){
 				  	<p><label for="grade">Grade</label>
 				  	<input type="text" name="grade" value=" {{ session["grade"] }}" ></input></p>
 				  	<button type="submit" name="b" value="Update Profile" class="button primary">Update Profile</button>
-			  	</form>
+			  	
 			  </div>
 			 </div>
 		  </div>
