--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -5,6 +5,10 @@ body {
   color: white !important;
 }
 
+form > p {
+  
+}
+
 .highlight {
 	color: rgba(46, 204, 113,1.0) !important;
 }
@@ -15,6 +19,15 @@ body {
   text-transform: uppercase;
 }
 
+.button {
+  background-color: rgba(46, 204, 113,1.0);
+  color: #fff;
+  border: 1px solid rgba(46, 204, 113,1.0) !important; 
+}
+.button:hover {
+  background-color: #fff;
+  color: rgba(46, 204, 113,1.0);
+}
 
 .center-block {
   background-color: rgba(48, 48, 48, 0.8);
