--- a/templates/base.html
+++ b/templates/base.html
@@ -24,13 +24,13 @@
     <![endif]-->
 
 	{% block head %}
-	{% endblock %}
+	{% endblock head %}
 
 </head>
 <body>
 
 	{% block navbar %}
-	{% endblock %}
+	{% endblock navbar %}
 
 	{% with messages = get_flashed_messages() %}
   		{% if messages %}
@@ -42,7 +42,7 @@
 	
 
 	{% block body %}
-	{% endblock %}
+	{% endblock body %}
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
