--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,50 @@
 {% extends "base.html" %}
+
+{% block head %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Tutee</title>
+
+    <!-- Custom styles for this template -->
+    <link href="../static/stylesheets/index.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+{% endblock head %}
+
 {% block body %}
-<h1>Log into your account</h1>
-<form method="POST" id="info">
-	<p>Email: <input type="text" name="email"></p>
-	<p>Password: <input type="password" name="password"></p>
-	<p><button type="submit" name="b" value="Submit">Submit</button></p>
-</form>
+
+<div class="container-fluid">
+
+  <nav>
+    <ul class="nav nav-pills nav-justified">
+      <li role="presentation"><a href="/login/tutee"><h3 class="highlight">Login</h3></a></li>
+      <li role="presentation" class="active"><a href="/"><h2 class="highlight">Tutee</h2></a></li>
+      <li role="presentation"><a href="/register/tutee"><h3 class="highlight">Register</h3></a></li>
+    </ul>
+  </nav>
+
+  <div class="center-block">
+    <div class="text-center">
+    	<h1>Log In</h1>
+    	<form method="POST" id="info">
+    		<p>Email: <input type="text" name="email"></p>
+    		<p>Password: <input type="password" name="password"></p>
+    		<p><button class="button" type="submit" name="b" value="Submit">Submit</button></p>
+		</form>
+    </div>
+  </div>
+
+</div>
+		
 {% endblock %}
+
+  {% block postscript %}
+  <script type="text/javascript" src="/static/js/index.js"></script>
+  {% endblock postscript %}
