--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% block body %}
 <h1>Log into your account</h1>
 <form method="POST" id="info">
-	<p>Email: <input type="text" name="email"></p>
+	<p>Username: <input type="text" name="username"></p>
 	<p>Password: <input type="password" name="password"></p>
 	<p><button type="submit" name="b" value="Submit">Submit</button></p>
 </form>
