--- a/templates/profile.html
+++ b/templates/profile.html
@@ -46,13 +46,13 @@
 		  </div>
 
 		  <div class="col-md-8">
-		  	{% if message["user_type"]=="tutor"%}
+		  	{% if message["type"]=="tutor"%}
 		  	<div class="panel panel-default">
 		  		<div class="panel-heading">
 		  			Favorite Subjects
 		  		</div>
 		  		<div class="panel-body">
-		  			{{session["subjects"]}}
+		  			{{message['classes']}}
 		  		</div>
 		  	</div>
 		  	<div class="panel panel-default">
@@ -60,7 +60,7 @@
 		  			Favorite Classes
 		  		</div>
 		  		<div class="panel-body">
-		  			{{session[["classes"]]}}
+		  			{{message['courses']}}
 		  		</div>
 		  	</div>
 		  	{% endif %}
