--- a/templates/login.html
+++ b/templates/login.html
@@ -18,6 +18,7 @@
     <![endif]-->
 {% endblock head %}
 
+{% block body %}
 
 <div class="container-fluid">
 
@@ -31,17 +32,18 @@
 
   <div class="center-block">
     <div class="text-center">
-    	<h1>Log In</h1>
-    	<form method="POST" id="info">
-    		<p>Username: <input type="text" name="username"></p>
-    		<p>Password: <input type="password" name="password"></p>
-    		<p><button class="button" type="submit" name="b" value="Submit">Submit</button></p>
-		</form>
+      <h1>Log In</h1>
+      <form method="POST" id="info">
+        <p>Email: <input type="text" name="email"></p>
+        <p>Password: <input type="password" name="password"></p>
+        <p><button class="button" type="submit" name="b" value="Submit">Submit</button></p>
+    </form>
     </div>
   </div>
 
 </div>
-		
+    
+{% endblock %}
 
   {% block postscript %}
   <script type="text/javascript" src="/static/js/index.js"></script>
