setting up updated register test

--- a/templates/register_update.html
+++ b/templates/register_update.html
@@ -7,7 +7,7 @@
 		<title>Register</title>
 		<meta name="author" content="Codrops" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		<script src="js/modernizr.custom.js"></script>
+		<script src="..static/js/modernizr.custom.js"></script>
 	</head>
 	<body>
 		<div class="split-container">
@@ -153,10 +153,10 @@
 				<a href="#" class="back back-left" title="back to intro">&larr;</a>
 			</div><!-- /splitlayout -->
 		</div><!-- /container -->
-		<script src="js/classie.js"></script>
-		<script src="js/cbpSplitLayout.js"></script>
-		<script src="js/dropdown.js"></script>
-		<script src="js/register_tutor.js"></script>
+		<script src="../static/js/classie.js"></script>
+		<script src="../static/js/cbpSplitLayout.js"></script>
+		<script src="../static/js/dropdown.js"></script>
+		<script src="../static/js/register_tutor.js"></script>
 		<script type="text/javascript">
 			function make_invisible(id) {
 			    document.getElementById(id).style.visibility = "hidden";
