--- a/templates/register_update.html
+++ b/templates/register_update.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<title>Register</title>
 		<meta name="author" content="Codrops" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<link rel="stylesheet" type="text/css" href="../static/css/component.css" />
 		<script src="..static/js/modernizr.custom.js"></script>
 	</head>
 	<body>
