--- a/templates/register_update.html
+++ b/templates/register_update.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<title>Register</title>
 		<meta name="author" content="Codrops" />
-		<link rel="stylesheet" type="text/css" href="../static/css/component.css" />
-		<script src="..static/js/modernizr.custom.js"></script>
+		<link rel="stylesheet" type="text/css" href="../static/stylesheets/component.css" />
+		<script src="../static/js/modernizr.custom.js"></script>
 	</head>
 	<body>
 		<div class="split-container">
