--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -31,9 +31,25 @@
 		</nav>
 		</form>
 	<div>
+	  {{session['conversations']}}
 	  {% for conversation in session['conversations'] %}
-	  {{conversation}} : {{session['conversations'][conversation]}}
-	  <br>
-	  {% endfor %}
+	  <div class="row">
+	    <div class="panel panel-default">
+	      <div class="panel-heading">
+		 <h3 class="panel-title">{{conversation}}</h3>
+	      </div>
+	      <div class="panel-body">
+		<div class="col-md-3">
+		  {% for message in session['conversations'][conversation] %}
+		  <p><a href="/profile/{{message['sender']}}">{{message['sender']}}</a>: {{message['message_text']}}<br>
+		  <i>Sent at {{message['time']}} on {{message['date']}}</i></p>
+		  {% endfor %}
+		  </div>
+	      </div>
+		<br>
+		{% endfor %}
+	    </div>
+	  </div>
 	</div>
+</div>
 {% endblock %}
