--- a/templates/register.html
+++ b/templates/register.html
@@ -124,18 +124,16 @@ color: #FFF
 {% block body %}
 	{% block header %}{% endblock %}
 
-	<form method="POST" id="info">
+	<form method="POST" action="{{ url_for('register', user_type=user_type) }}" id="info">
 		<p>First Name: <input type="text" name="first_name"></p>
 
 		<p>Last Name: <input type="text" name="last_name"></p>
 
 		<p>Username: <input type="text" name="username"></p>
 
-		<p>Email: <input type="text" name="email"></p>
+		<p>Email: {{ form.email }}</p>
 
-		<p>Password: <input type="password" name="password"></p>
-
-		<p>Confirm Password: <input type="password" name="confirm_password"></p>
+		<p>Password: {{ form.password }}</p>
 
 		<p>School: <input type="text" name="school"></p>
 
@@ -150,13 +148,10 @@ color: #FFF
 		    <option value="School">School</option>
 		</select></p>
 
-
-		
-
 		{% block info %}{% endblock %}
 
 		<p><button type="submit" name="b" value="Submit">Submit</button></p>
-		
+	{{ form.csrf_token }}	
 	</form>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/dropdown.js"></script>
