--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 
+{% block head %}
+	<link rel="stylesheet" type="text/css" href="../static/stylesheets/inside.css">
+{% endblock head %}
+
 {% block navbar %}
 	<div class="container">
-		<nav class="navbar navbar-default">
+		<!-- <nav class="navbar navbar-default">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -27,10 +31,29 @@
 		        </ul>
 		        </div>
 			</div>
+		</nav> -->
+		<nav class="navbar navbar-tutee">
+			<div class="container-fluid">
+
+				<div id="navbar" class="collapse navbar-collapse">
+		       		<ul class="nav navbar-nav">
+		       			<li><a href="/homepage"><h3>Tutee</h3></a></li>
+					    <li><a href="/profile/{{session['username']}}"><h4>Profile</h4></a></li>
+				        <li><a href="/search"><h4>Search</h4></a></li>
+				        <li><a href="/settings/profile"><h4>Account Settings</h4></a></li>
+					    <li><a href="/inbox"><h4>Inbox</h4></a></li>
+					    <li><a href="/about"><h4>About Tutee</h4></a></li>
+				    </ul>
+		    		<ul class="nav navbar-nav navbar-right">
+		          		<li><p class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
+			  			<li><form method="POST" id="message"><input type="submit" class="btn btn-default navbar-btn button" name="s" value="Log Out"></li>
+		        	</ul>
+		        </div>
+			</div>
 		</nav>
 		<div class="row">
 		  <div class="col-md-4">
-		    <div class="thumbnail">
+		    <div class="thumbnail grey">
 		      <img src="http://upload.wikimedia.org/wikipedia/commons/8/8d/President_Barack_Obama.jpg">
 		      <div class="caption">
 			<h3>
