--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -30,7 +30,7 @@ input {
 
 .center-block {
   background-color: rgba(48, 48, 48, 0.8);
-  border: 10px solid #ffffff;
+  border: 10px solid rgba(255,255,255,0.0);
   margin-left: 25%;
   margin-right: 25%;
 
