--- a/templates/login.html
+++ b/templates/login.html
@@ -34,7 +34,7 @@
     <div class="text-center">
       <h1>Log In</h1>
       <form method="POST" id="info">
-        <p>Email: <input type="text" name="email"></p>
+        <p>Username: <input type="text" name="username"></p>
         <p>Password: <input type="password" name="password"></p>
         <p><button class="button" type="submit" name="b" value="Submit">Submit</button></p>
     </form>
