--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
+{% block head %}
 
+{% block head2 %}
+{% endblock %}
+{%endblock%}
 {% block navbar %}
 	<div class="container">
-		<nav class="navbar navbar-default">
+		<!-- <nav class="navbar navbar-default">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -27,8 +31,28 @@
 		        </ul>
 		        </div>
 			</div>
+		</nav> -->
+		<nav class="navbar navbar-tutee">
+			<div class="container-fluid">
+
+				<div id="navbar" class="collapse navbar-collapse">
+		       		<ul class="nav navbar-nav">
+		       			<li><a href="/homepage"><h3>Tutee</h3></a></li>
+					    <li><a href="/profile/{{session['username']}}"><h4>Profile</h4></a></li>
+				        <li><a href="/search"><h4>Search</h4></a></li>
+				        <li><a href="/settings/profile"><h4>Account Settings</h4></a></li>
+					    <li><a href="/inbox"><h4>Inbox</h4></a></li>
+					    <li><a href="/about"><h4>About Tutee</h4></a></li>
+				    </ul>
+		    		<ul class="nav navbar-nav navbar-right">
+		          		<li><p class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
+			  			<li><form method="POST" id="message"><input type="submit" class="btn btn-default navbar-btn button" name="s" value="Log Out"></li>
+		        	</ul>
+		        </div>
+			</div>
 		</nav>
-		<div class="col-md-4" role="navigation">
+
+		<!-- <div class="col-md-4" role="navigation">
 			<nav class="menu">
 			  <h3 class="menu-heading" data-pjax>Settings</h3>
 			    <a href="settings/update_profile" class="list-group-item">Profile</a>
@@ -37,9 +61,8 @@
 				    <a href="settings/subjects" class="list-group-item">Subjects</a>
 				    <a href="settings/times" class="list-group-item">Times</a>
 				{% endif %}
-			  </div>
 			</nav>
-		</div>
+		</div> -->
 		{% block settings_type %}
 		{% endblock %}
 	</div>
