--- a/templates/settings_profile.html
+++ b/templates/settings_profile.html
@@ -29,37 +29,35 @@ function previewFile(){
 {% endblock head2 %}
 
 {% block settings_type %}
+<div class="panel panel-default grey">
+	<h3 class="settings-header">Update Profile</h3>
+	<div class="panel-body">
+		<div class="row">
+			<div class="col-md-4">
 
-<div class="col-md-8">
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<h3 class="panel-title">Profile</h3>
-		</div>
-		<div class="panel-body">
-			<div class="row">
-				<div class="col-md-4">
+				<div class="thumbnail">
+					<img src="http://upload.wikimedia.org/wikipedia/commons/8/8d/President_Barack_Obama.jpg" onchange="previewFile()">
+				</div>
+			</div>
 
-					<div class="thumbnail">
-						<img src="http://upload.wikimedia.org/wikipedia/commons/8/8d/President_Barack_Obama.jpg" onchange="previewFile()">
-					</div>
+			<div class="col-md-8">
+				<p><label for="username">Username</label>
+				<input type="text" name="username"></input></p>
+				<p><label for="email">Email</label>
+				<input type="text" name="email" value=" {{ session["email"] }}" ></input></p>
+				<p><label for="school">School</label>
+				<input type="text" name="school" value=" {{ session["school"] }}" ></input></p>
+				<p><label for="grade">Grade</label>
+				<input type="text" name="grade" value=" {{ session["grade"] }}" ></input></p>
+				<input type="submit" class="btn btn-default navbar-btn button" name="b" value="Update Profile">
+
+				<div class="picture-form"><br><br><br>
 					<form method="POST">
 						<p><label for="profile_picture">Upload Picture</label>
 						<input type="file" onchange="previewFile()"></p>
 						<input type="hidden" id="pic">
-						<button type="submit" name="b" value="Update Profile Picture" class="button primary">Update Profile Picture</button>
+						<input type="submit" class="btn btn-default navbar-btn button" name="b" value="Update Profile Picture">
 					</form>
-				</div>
-
-				<div class="col-md-8">
-					<p><label for="username">Username</label>
-					<input type="text" name="username"></input></p>
-					<p><label for="email">Email</label>
-					<input type="text" name="email" value=" {{ session["email"] }}" ></input></p>
-					<p><label for="school">School</label>
-					<input type="text" name="school" value=" {{ session["school"] }}" ></input></p>
-					<p><label for="grade">Grade</label>
-					<input type="text" name="grade" value=" {{ session["grade"] }}" ></input></p>
-					<button type="submit" name="b" value="Update Profile" class="button primary">Update Profile</button>
 				</div>
 			</div>
 		</div>
