--- a/templates/settings_profile.html
+++ b/templates/settings_profile.html
@@ -47,16 +47,17 @@ function previewFile(){
 			  </div>
 
 			  <div class="col-md-8">
-				  	<p><label for="username">Username</label>
-				  	<input type="text" name="username"></input></p>
-				  	<p><label for="email">Email</label>
-				  	<input type="text" name="email" value=" {{ session["email"] }}" ></input></p>
-				  	<p><label for="school">School</label>
-				  	<input type="text" name="school" value=" {{ session["school"] }}" ></input></p>
-				  	<p><label for="grade">Grade</label>
-				  	<input type="text" name="grade" value=" {{ session["grade"] }}" ></input></p>
-				  	<button type="submit" name="b" value="Update Profile" class="button primary">Update Profile</button>
-			  	
+			  		<form method="POST"
+					  	<p><label for="username">Username</label>
+					  	<input type="text" name="username"></input></p>
+					  	<p><label for="email">Email</label>
+					  	<input type="text" name="email" value=" {{ session["email"] }}" ></input></p>
+					  	<p><label for="school">School</label>
+					  	<input type="text" name="school" value=" {{ session["school"] }}" ></input></p>
+					  	<p><label for="grade">Grade</label>
+					  	<input type="text" name="grade" value=" {{ session["grade"] }}" ></input></p>
+					  	<button type="submit" name="b" value="Update Profile" class="button primary">Update Profile</button>
+			  		</form>
 			  </div>
 			 </div>
 		  </div>
