--- a/templates/register_update.html
+++ b/templates/register_update.html
@@ -15,7 +15,7 @@
 				<div class="intro">
 					<div class="side side-left">
 						<div class="split-back" id="back-button">
-							<a href="#">Back To Home</a>
+							<a href="/">Back To Home</a>
 						</div>
 						<div class="intro-content left" onclick="make_invisible('back-button');">
 							<h1><span>Register </span><span>Tutor</span></h1>
