--- a/templates/login.html
+++ b/templates/login.html
@@ -32,12 +32,11 @@
         <div class="page page-right">
           <div class="page-inner">
 
-          <h2> Tutor Login </h2>
-            <form method="POST" id="info">
-              <input type="hidden" name="user_type" value="tutor"></input>
+          <h2> Tutee Login </h2>
+            <form method="POST">
               <p>Username: <input type="text" name="username"></p>
               <p>Password: <input type="password" name="password"></p>
-              <p><button class="button" type="submit" name="b" value="Submit">Submit</button></p>
+              <p><button class="button" type="submit" name="b" value="login_tutee">Submit</button></p>
             </form> 
 
 
@@ -46,12 +45,12 @@
         <div class="page page-left">
           <div class="page-inner">
 
-            <h2> Tutee Login </h2>
-            <form method="POST" id="info">
+            <h2> Tutor Login </h2>
+            <form method="POST">
               <input type="hidden" name="user_type" value="tutee"></input>
               <p>Username: <input type="text" name="username"></p>
               <p>Password: <input type="password" name="password"></p>
-              <p><button class="button" type="submit" name="b" value="Submit">Submit</button></p>
+              <p><button class="button" type="submit" name="b" value="login_tutor">Submit</button></p>
             </form>
             
 
