edit availibiltiy done

--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -45,9 +45,8 @@
 
 </div>
 
-
-
-<button type="button" id="add">Add Another Day</button>
+<br><br>
+<button type="button" id="add">Add Another Day</button><br><br>
 
 
 {% endblock %}
