--- a/templates/settings_profile.html
+++ b/templates/settings_profile.html
@@ -1,5 +1,5 @@
 {% extends "settings.html" %}
-{% block head %}
+{% block head2 %}
 <script>
 function previewFile(){
        var preview = document.querySelector('img'); //selects the query named img
