--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -24,6 +24,17 @@
 		        </div>
 			</div>
 		</nav>
+		{% for appt in appts %}
+		<div class="panel panel-default">
+		  <div class="panel-heading">
+		    <h3 class="panel-title">Session with {{ appt["tutor"] }}</h3>
+		  </div>
+		  <div class="panel-body" style="color:black">
+			<p>Subject: {{ appt["subject"] }}</p>
+			<p>Class: {{ appt["class"] }}</p>
+		  </div>
+		</div>
+		{% endfor %}
 	<!-- <div class="form-group">
 	  <label for="recepient">Recepient</label>
 	  <input type="text" class="form-control" name="recipient" placeholder="Enter Recipient">
