--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,7 +19,7 @@
 				    </ul>
 		    		<ul class="nav navbar-nav navbar-right">
 		          		<li><p class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
-			  			<li><form method="POST" id="message"><input type="submit" class="btn btn-default navbar-btn button" name="s" value="Log Out"></li>
+			  			<li><<input type="submit" class="btn btn-default navbar-btn button" name="s" value="Log Out"></li>
 		        	</ul>
 		        </div>
 			</div>
@@ -35,13 +35,15 @@
 		  </div>
 		</div>
 		{% endfor %}
-	<!-- <div class="form-group">
+	<form method="POST" id="message">
+	<div class="form-group">
 	  <label for="recepient">Recepient</label>
 	  <input type="text" class="form-control" name="recipient" placeholder="Enter Recipient">
 	  <label for="message">Message</label>
 	  <input type="text" class="form-control" name="message" placeholder="Message">
 	  <input type="submit" class="btn btn-default navbar-btn button" name="s" value="Send">
-	  </form>
-  </div> -->
+	  </div>
+	</form>
+  
 	</div>
 {% endblock %}
