--- a/templates/settings_profile.html
+++ b/templates/settings_profile.html
@@ -36,7 +36,7 @@ function previewFile(){
 			<div class="col-md-4">
 
 				<div class="thumbnail">
-					<img src={{ session["pic_id"] }} >
+					<img src="{{ session['pic_id'] }}" >
 				</div>
 			</div>
 
