--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,32 +6,6 @@
 
 {% block navbar %}
 	<div class="container">
-		<!-- <nav class="navbar navbar-default">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-			            <span class="sr-only">Toggle navigation</span>
-			            <span class="icon-bar"></span>
-			            <span class="icon-bar"></span>
-			            <span class="icon-bar"></span>
-			          </button>
-					<a class="navbar-brand" href="#">Tutee</a>
-			</div>
-				<div id="navbar" class="collapse navbar-collapse">
-		          <ul class="nav navbar-nav">
-			    <li><a href="/profile/{{session['username']}}">Profile</a></li>
-		            <li><a href="/search">Search</a></li>
-		            <li><a href="/settings">Account Settings</a></li>
-			    <li><a href="/inbox">Inbox</a></li>
-			    <li><a href="/about">About Tutee</a></li>
-		          </ul>
-		    	<ul class="nav navbar-nav navbar-right">
-		          <li><p class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
-			  <li><form method="POST"><input type="submit" class="btn btn-default navbar-btn" name="b" value="Log Out"></form></li>
-		        </ul>
-		        </div>
-			</div>
-		</nav> -->
 		<nav class="navbar navbar-tutee">
 			<div class="container-fluid">
 
@@ -69,18 +43,18 @@
 
 		  <div class="col-md-8">
 		  	{% if message["type"]=="tutor"%}
-		  	<div class="panel panel-default">
-		  		<div class="panel-heading">
-		  			Favorite Subjects
-		  		</div>
+		  	<div class="panel panel-default grey">
+		  		<!-- <div class="panel-heading"> -->
+		  			<h3 class="under">Favorite Subjects</h3>
+		  		<!-- </div> -->
 		  		<div class="panel-body">
 		  			{{message['classes']}}
 		  		</div>
 		  	</div>
-		  	<div class="panel panel-default">
-		  		<div class="panel-heading">
-		  			Favorite Classes
-		  		</div>
+		  	<div class="panel panel-default grey">
+		  		<!-- <div class="panel-heading"> -->
+		  			<h3 class="under">Favorite Classes</h3>
+		  		<!-- </div> -->
 		  		<div class="panel-body">
 		  			{{message['courses']}}
 		  		</div>
