finished basic styling

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -20,8 +20,7 @@ $('#myModal').on('shown.bs.modal', function () {
 				    	<li><a href="/profile/{{session['username']}}"><h4>Profile</h4></a></li>
 			        	<li><a href="/search"><h4>Search</h4></a></li>
 			        	<li><a href="/settings/profile"><h4>Account Settings</h4></a></li>
-				    	<li><a href="/inbox"><h4>Inbox</h4></a></li>
-				    	<li><a href="/about"><h4>About Tutee</h4></a></li>
+				    	<li><a href="/inbox"><h4>Messages</h4></a></li>
 			    	</ul>
 	    			<ul class="nav navbar-nav navbar-right">
 	          			<li><p class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
