--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,7 +15,7 @@
 					    <li><a href="/profile/{{session['username']}}"><h4>Profile</h4></a></li>
 				        <li><a href="/search"><h4>Search</h4></a></li>
 				        <li><a href="/settings/profile"><h4>Account Settings</h4></a></li>
-					    <li><a href="/inbox"><h4>Inbox</h4></a></li>
+					    <li><a href="/inbox"><h4>Messages</h4></a></li>
 				    </ul>
 		    		<ul class="nav navbar-nav navbar-right">
 		          		<li><p class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
@@ -35,13 +35,5 @@
 		  </div>
 		</div>
 		{% endfor %}
-	<!-- <div class="form-group">
-	  <label for="recepient">Recepient</label>
-	  <input type="text" class="form-control" name="recipient" placeholder="Enter Recipient">
-	  <label for="message">Message</label>
-	  <input type="text" class="form-control" name="message" placeholder="Message">
-	  <input type="submit" class="btn btn-default navbar-btn button" name="s" value="Send">
-	  </form>
-  </div> -->
 	</div>
 {% endblock %}
