--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -15,7 +15,7 @@
 					    <li><a href="/profile/{{session['username']}}"><h4>Profile</h4></a></li>
 				        <li><a href="/search"><h4>Search</h4></a></li>
 				        <li><a href="/settings/profile"><h4>Account Settings</h4></a></li>
-					    <li><a href="/inbox"><h4>Inbox</h4></a></li>
+					    <li><a href="/inbox"><h4>Messages</h4></a></li>
 				    </ul>
 		    		<ul class="nav navbar-nav navbar-right">
 		          		<li><p class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
@@ -24,15 +24,28 @@
 		        </div>
 			</div>
 		</nav>
-		</form>
+
+
+		<div class="row">
+	    <div class="panel panel-default grey">
+		<div class="form-group">
+
+		  		<label for="recepient">Recepient</label>
+		  		<input type="text" class="form-control" name="recipient" placeholder="Enter Recipient">
+		  		<label for="message">Message</label>
+		  		<input type="text" class="form-control" name="message" placeholder="Message">
+		  		<input type="submit" class="btn btn-default navbar-btn button" name="s" value="Send">
+	  		</form>
+	  	</div>
+	  	</div>
+	  	</div>
+
 	<div>
 	  {{session['conversations']}}
 	  {% for conversation in session['conversations'].keys() %}
 	  <div class="row">
-	    <div class="panel panel-default">
-	      <div class="panel-heading">
-		 <h3 class="panel-title">{{conversation}}</h3>
-	      </div>
+	    <div class="panel panel-default grey">
+		 <h3 class="under">{{conversation}}</h3>
 	      <div class="panel-body">
 		<div class="col-md-3">
 		  {% for message in session['conversations'][conversation] %}
