set times for appt

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -32,6 +32,10 @@
 		  <div class="panel-body" style="color:black">
 			<p>Subject: {{ appt["subject"] }}</p>
 			<p>Class: {{ appt["class"] }}</p>
+			<p>Day: {{appt["day"]}} </p>
+			<p>Start Time: {{appt["start_time"]}}</p>
+			<p>End Time: {{appt["end_time"]}}</p>
+			<p>Location: {{appt["location"]}}</p>
 		  </div>
 		</div>
 		{% endfor %}
