--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,6 +2,11 @@
 
 {% block head %}
 	<link rel="stylesheet" type="text/css" href="../static/stylesheets/inside.css">
+<script>
+$('#sendMessage').on('shown.bs.modal', function () {
+    $('#myInput').focus()
+  });
+</script>
 {% endblock head %}
 
 {% block navbar %}
@@ -19,7 +24,7 @@
 				    </ul>
 		    		<ul class="nav navbar-nav navbar-right">
 		          		<li><p class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
-			  			<li><form method="POST" id="message"><input type="submit" class="btn btn-default navbar-btn button" name="s" value="Log Out"></li>
+			  			<li><form method="POST" id="message"><input type="submit" class="btn btn-default navbar-btn button" name="s" value="Log Out"></li></form>
 		        	</ul>
 		        </div>
 			</div>
@@ -60,9 +65,37 @@
 		  		</div>
 		  	</div>
 		  	{% endif %}
-  {% endfor %}
+		{% if session["type"] != message["type"] %}
+		<form method="POST" class="pull-right">
+			    		<button type="button" data-toggle="modal" data-target="#sendMessage">Send Message</button>
+			    </form>
+		<div class="modal fade" id="sendMessage" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h4 class="modal-title" id="myModalLabel">Send a message</h4>
+					</div>
+					<div class="modal-body">
+						<form method="POST">
+							<input type="hidden" value="{{message['username']}}" name="recipient"></input>
+							<div class="form-group">
+								<label for="message" class="control-label">Message: </label>
+								<input type="text" class="form-control" name="message" id="message"></input>
+							</div>
+					</div>
+						<div class="modal-footer">
+							<button type="submit" class="btn btn-primary" name="s" value="Make Appointment">Send Message</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+		{% endif %}
+
+
+		{% endfor %}
   		{% endif %}
-	{% endwith %}
+		{% endwith %}
 		  </div>
 		</div>
 	</div>
