alerts and more pops

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -67,19 +67,19 @@ $('#sendMessage').on('shown.bs.modal', function () {
 		  	{% endif %}
 		{% if session["type"] != message["type"] %}
 		<form method="POST" class="pull-right">
-			    		<button type="button" data-toggle="modal" data-target="#sendMessage">Send Message</button>
+			    		<button type="button" style="color:black" data-toggle="modal" data-target="#sendMessage">Send Message</button>
 			    </form>
 		<div class="modal fade" id="sendMessage" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h4 class="modal-title" id="myModalLabel">Send a message</h4>
+						<h4 class="modal-title" style="color:black" id="myModalLabel">Send a message</h4>
 					</div>
 					<div class="modal-body">
 						<form method="POST">
 							<input type="hidden" value="{{message['username']}}" name="recipient"></input>
 							<div class="form-group">
-								<label for="message" class="control-label">Message: </label>
+								<label for="message" style="color:black" class="control-label">Message: </label>
 								<input type="text" class="form-control" name="message" id="message"></input>
 							</div>
 					</div>
