--- a/templates/search.html
+++ b/templates/search.html
@@ -56,7 +56,7 @@
 				<!--Front end design idea: Button to "add day," which will create new field for day, time, and address-->
 
 				  {% block info %}{% endblock %}
-				  <p><button class="btn btn-default navbar-btn button" type="submit" name="b" value="Submit">Submit</button></p>
+				  <p><button class="btn btn-default navbar-btn button" type="submit" form="info" name="s" value="Submit">Submit</button></p>
 			</form>
 		</div>
   		</div>
