--- a/templates/settings_times.html
+++ b/templates/settings_times.html
@@ -32,7 +32,7 @@
 <br id="change">
 <button type="button" id="edit_b">Edit</button><br>
 <button type="button" id="add" style="visibility:hidden">Add Another Day</button>
-<button type="submit" id="save_b" name="b" value="Update Times" class="button primary" style="visibility:hidden">Save</button>
+<button type="submit" id="save_b" name="s" value="Update Times" class="button primary" style="visibility:hidden">Save</button>
 
 </form>
 
