--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -47,7 +47,7 @@ $('#myModal').on('shown.bs.modal', function () {
 				    <p>Grade: {{ tutor["grade"] }}</p>
 				</div>
 				<form method="POST" class="pull-right">
-			    		<button type="button" data-toggle="modal" data-target="#myModal">Create Appointment</button>
+			    		<button type="button" data-toggle="modal" style="color:black" data-target="#myModal">Create Appointment</button>
 			    </form>
 			  </div>
 			</div>
@@ -57,17 +57,17 @@ $('#myModal').on('shown.bs.modal', function () {
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="myModalLabel">Make an appointment with {{ tutor["first_name"] }} {{ tutor["last_name"] }}</h4>
+						<h4 class="modal-title" style="color:black" id="myModalLabel">Make an appointment with {{ tutor["first_name"] }} {{ tutor["last_name"] }}</h4>
 					</div>
 					<div class="modal-body">
 						<form method="POST">
 							<input type="hidden" value="{{tutor["username"]}}" name="username"></input>
 							<div class="form-group">
-								<label for="subject" class="control-label">Subject: </label>
+								<label for="subject" style="color:black" class="control-label">Subject: </label>
 								<input type="text" class="form-control" name="subject"id="subject"></input>
 							</div>
 							<div class="form-group">
-								<label for="class" class="control-label">Class: </label>
+								<label for="class" style="color:black" class="control-label">Class: </label>
 								<input type="text" class="form-control" name="class"id="class"></input>
 							</div>
 							{% set n = 0 %}
@@ -75,7 +75,7 @@ $('#myModal').on('shown.bs.modal', function () {
 					</div>
 					
 						<div class="modal-footer">
-							<button type="submit" class="btn btn-primary" name="b" value="Make Appointment">Make appointment</button>
+							<button type="submit" class="btn btn-primary" name="s" value="Make Appointment">Make appointment</button>
 						</div>
 					</form>
 				</div>
