--- a/templates/search.html
+++ b/templates/search.html
@@ -19,7 +19,7 @@
 				    <li><a href="/inbox"><h4>Messages</h4></a></li>
 			    </ul>
 	    		<ul class="nav navbar-nav navbar-right">
-	          		<li><p class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
+	          		<li><p style="color:black !important" class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
 		  			<li><form method="POST" id="message"><input type="submit" class="btn btn-default navbar-btn button" name="s" value="Log Out"></li>
 		  		</form>
 	        	</ul>
