--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -24,31 +24,32 @@ $('#myModal').on('shown.bs.modal', function () {
 				    	<li><a href="/inbox"><h4>Messages</h4></a></li>
 			    	</ul>
 	    			<ul class="nav navbar-nav navbar-right">
-	          			<li><p class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
+	          			<li><p style="color:black !important" class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
 		  				<li><form method="POST" id="message"><input type="submit" class="btn btn-default navbar-btn button" name="s" value="Log Out"></li>
 		  				</form>
 	        		</ul>
 	        	</div>
 			</div>
 		</nav>
-
-		<div class="panel panel-default grey">
-		<h2>We found {{ tutor_list|count }} tutor(s) that matched your search</h2>
+		<h2 style="color:black !important">We found {{ tutor_list|count }} tutor(s) that matched your search</h2>
 		{% for tutor in tutor_list %}
-		<div class="row">
+		<div class="row" >
 			<div class="panel panel-default">
-			  <div class="panel-heading">
+			  <div class="panel-heading clearfix">
+			    <form method="POST" class="pull-right">
+			    		<button type="button" data-toggle="modal" class="btn btn-default btn-sm" data-target="#myModal">
+			    			<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+			    		</button>
+			    </form>
 			    <h3 class="panel-title">{{ tutor["username"] }}</h3>
 			  </div>
-			  <div class="panel-body">
+			  <div class="panel-body" style="color:black !important">
 			  	<div class="col-md-3">
 			  		<h3>{{ tutor["first_name"] }} {{tutor["last_name"]}}</h3>
 				    <p>School: {{ tutor["school"] }}</p>
 				    <p>Grade: {{ tutor["grade"] }}</p>
 				</div>
-				<form method="POST" class="pull-right">
-			    		<button type="button" data-toggle="modal" style="color:black" data-target="#myModal">Create Appointment</button>
-			    </form>
+
 			  </div>
 			</div>
 		</div>
